--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,82 @@
  *= require_tree .
  *= require_self
  */
+
+.navbar {
+  height: 50px;
+}
+
+.navbar-brand {
+  padding-top: 5px;
+}
+
+.main-logo {
+  background-image: url("logo.svg");
+  background-size: 40px;
+  background-repeat: no-repeat;
+  fill: white;
+  width: 50px;
+  height: 50px;
+}
+
+.navbar-collapse {
+}
+
+body {
+  padding-top: 50px;
+}
+
+.sign-in-container {
+  width: 100%;
+  height: 650px;
+  position: absolute;
+  z-index: 1;
+  background-color: white;
+  display: none;
+  text-align: center;
+  @media(min-width:34em){
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.sign-up-container {
+  width: 100%;
+  height: 650px;
+  position:absolute;
+  z-index: 1;
+  background-color: white;
+  display: none;
+  text-align: center;
+  @media(min-width:34em){
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .body-container {
+  width: 100%;
+  height: 650px;
+  padding: 0;
+}
+
+.facebook-button {
+  height: 80px;
+  width: 80%;
+  display: inline-block;
+}
+
+.facebook-button icon {
+  font-size: 15px;
+  color: white;
+}
+
+.facebook-button span {
+  font-size: 15px;
+  color: white;
+}
+
+hr.style1{
+	border-top: 1px solid #8c8b8b;
+}
