--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
-  <%= javascript_include_tag 'application' %>
+    <title>AirBnbClone</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tag %>
 </head>
 <body>
+
+<h1>WELCOME TO PAIRBNB</h1>
+
   <div id="header">
     <% if signed_in? -%>
       <%= button_to t(".sign_out"), sign_out_path, method: :delete %>
@@ -21,4 +28,119 @@
 
   <%= yield %>
 </body>
-</html>
+</html> 
+
+
+ <!--  <!DOCTYPE html>
+<html>
+<head>
+  <title>AirbnbClone</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <script src="https://use.fontawesome.com/5760e317e8.js"></script>
+
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+</head>
+<body>
+
+  <div id="header">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/"><div class="main-logo"></div></a>
+           </div>
+        <div class="collapse navbar-inverse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active">
+              <%= link_to "Home", root_url, method: :get %>
+            </li>
+
+            <% if signed_in? %>
+              <li>
+                <%= link_to "Create a listing", new_listing_path, method: :get %>
+              </li>
+              <li>
+                <%= link_to "View profile", user_path(current_user.id) %>
+              </li>
+              <li>
+                <%= link_to t(".sign_out"), sign_out_path, method: :delete %>
+              </li>
+            <% else %>
+              <li>
+                <%= content_tag(:a, "Sign In", class: "sign-in") %>
+              </li>
+              <li>
+                <%= content_tag(:a, "Sign Up", class: "sign-up") %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+       </nav>
+  </nav>
+</div>
+
+<div class="container sign-in-container">
+  <br>
+  <button class="btn btn-primary facebook-button">
+    <a href='/auth/facebook'>
+      <span>
+        <icon class="fa fa-facebook"></icon>
+        <span>Sign In with Facebook</span>
+      </span>
+    </a>
+  </button>
+  <hr class="style1">
+  <%= render partial: '/sessions/form' %>
+</div>
+
+<div class="container sign-up-container">
+  <br>
+  <button class="btn btn-primary facebook-button">
+    <a href='/auth/facebook'>
+      <span>
+        <icon class="fa fa-facebook"></icon>
+        <span>Sign Up with Facebook</span>
+      </span>
+        </a>
+  </button>
+  <hr class="style1">
+
+  <%= form_for :user, url: users_path do |form| %>
+  <%= render partial: '/users/form', object: form %>
+
+  <div class="password-field">
+    <%= form.label :password %>
+    <%= form.password_field :password %>
+  </div>
+
+  <div class="submit-field">
+    <%= form.submit %>
+  </div>
+
+  <div class="other-links">
+    <br>
+    <p>Already have an account?</p>
+    <%= link_to t(".sign_in"), sign_in_path %>
+  </div>
+
+  <% end %>
+</div>
+<div class="container body-container">
+  <%= yield %>
+</div>
+
+</body>
+</html>  -->
